<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="flash_search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="com.memz2345.navi.flash.action.SHORTCUT"
            android:targetPackage="com.memz2345.navi.flash"
            android:targetClass="com.memz2345.navi.flash.MainActivity">
            <extra
                android:name="flash_action"
                android:value="search" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="flash_offline"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_offline"
        android:shortcutShortLabel="@string/shortcut_offline"
        android:shortcutLongLabel="@string/shortcut_offline_long">
        <intent
            android:action="com.memz2345.navi.flash.action.SHORTCUT"
            android:targetPackage="com.memz2345.navi.flash"
            android:targetClass="com.memz2345.navi.flash.MainActivity">
            <extra
                android:name="flash_action"
                android:value="offline" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="flash_recommend"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_recommend"
        android:shortcutShortLabel="@string/shortcut_recommend"
        android:shortcutLongLabel="@string/shortcut_recommend_long">
        <intent
            android:action="com.memz2345.navi.flash.action.SHORTCUT"
            android:targetPackage="com.memz2345.navi.flash"
            android:targetClass="com.memz2345.navi.flash.MainActivity">
            <extra
                android:name="flash_action"
                android:value="recommend" />
        </intent>
    </shortcut>
</shortcuts>
